Test/git-issues/git-issue-151.dfy.expect
git-issue-151.dfy(37,18): Error: The name U ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(37,22): Error: The name U ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(39,18): Error: The name W ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(39,22): Error: The name W ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(40,18): Error: The name X ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(40,22): Error: The name X ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(42,18): Error: The name Z ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
git-issue-151.dfy(42,22): Error: The name Z ambiguously refers to a type in one of the modules A, B (try qualifying the type name with the module name)
8 resolution/type errors detected in git-issue-151.dfy
